添加数据库模型

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -85,7 +85,7 @@
 
          <div class="input-group input-group-lg">
   <span class="input-group-addon" id="sizing-addon1">邮箱地址</span>
-  <input type="text" class="form-control" placeholder="Mail" aria-describedby="sizing-addon1" name="mail">
+  <input type="text" class="form-control" placeholder="Mail addr" aria-describedby="sizing-addon1" name="mail">
 </div>
 
          <div class="input-group input-group-lg">
