添加数据库模型

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -140,7 +140,7 @@
 						<td>{{ item.username }}</td>
 						<td>administrator</td>
                         <td>{{ item.telephone }}</td>
-                        <td>{{ item.mail }}@qq.com</td>
+                        <td>{{ item.mail }}</td>
                         <td>{{ item.ctime }}</td>
                         <td>{{ item.etime }}</td>
                         <td>{{ item.status }}</td>
