添加数据库模型

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %}Hello World{% endblock %}
 
 {% block head %}{% endblock %}
 
