--- a/templates/base.html
+++ b/templates/base.html
@@ -75,13 +75,13 @@
                             </div>
                         </li>
                         <li class="sidebar-dropdown">
-                            <a href="#"><i class="fa fa-bar-chart-o"></i><span>日志分析</span></a>
+                            <a href="#"><i class="fa fa-bar-chart-o"></i><span>Docker</span></a>
                             <div class="sidebar-submenu">
                                 <ul>
-                                    <li><a href="#">submenu 1</a></li>
-                                    <li><a href="#">submenu 2</a></li>
-                                    <li><a href="#">submenu 3</a></li>
-                                    <li><a href="#">submenu 4</a></li>
+                                    <li><a href="{{ url_for('docker',id='host_list') }}">主机列表</a></li>
+                                    <li><a href="#">主机容器</a></li>
+                                    <li><a href="#">容器监控</a></li>
+                                    <li><a href="#">镜像仓库</a></li>
                                 </ul>
                             </div>
                         </li>
