添加数据库模型

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,9 @@
                             {% if user %}
                             <strong>{{ user.username }}</strong></span>
                              {% else %}
-                             <strong>请登录</strong></span>
+                             <strong>admin</strong></span>
                             {% endif %}
+
 
                         <span class="user-role">Administrator</span>
                         <div class="user-status">                       
