--- a/templates/hostlist.html
+++ b/templates/hostlist.html
@@ -12,7 +12,7 @@
 <p>名称：<input type="test" name="hostname"></p>
 <p>IP&emsp;： <input type="test" name="ipaddr"></p>
 <p>端口：<input type="test" name="port"></p>
-        <p><button type="submit">添加记录</button><button type="submit">删除记录</button></p>
+        <p><button type="submit">添加记录</button>&emsp;&emsp;&emsp;<button type="submit">删除记录</button></p>
 </form>
 </header>
     <div class="container">
