添加登录日志

--- a/templates/user_login_log.html
+++ b/templates/user_login_log.html
@@ -20,224 +20,15 @@
 					</tr>
 				</thead>
 				<tbody>
+                {% for item in items %}
 					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
+						<td>{{ loop.index }}</td>
+						<td>{{ item.username }}</td>
+						<td>{{ item.ipaddr }}</td>
+						<td>{{ item.ctime }}</td>
                         <td>在线</td>
 					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>127.0.0.1</td>
-						<td>2018-01-01 02:55</td>
-                        <td>在线</td>
-					</tr>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-					</tr>
+                {% endfor %}
 				</tbody>
 			</table>
 		</div>
