--- a/templates/user_login_log.html
+++ b/templates/user_login_log.html
@@ -26,7 +26,7 @@
 						<td>{{ item.username }}</td>
 						<td>{{ item.ipaddr }}</td>
 						<td>{{ item.ctime }}</td>
-                        <td>在线</td>
+                        <td><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></td>
 					</tr>
                 {% endfor %}
 				</tbody>
