--- a/templates/hostlist.html
+++ b/templates/hostlist.html
@@ -5,7 +5,17 @@
 {% block head %}{% endblock %}
 
 {% block main %}
-<header class="header"><h1>主机列表</h1>
+<header class="header">
+
+        {% if success %}
+        <div class="alert alert-success alert-dismissible" role="alert">{{ success }}</div>
+        {% endif %}
+
+        {% if error %}
+        <div class="alert alert-danger alert-dismissible" role="alert">{{ error }}</div>
+        {% endif %}
+
+    <h1>主机列表</h1>
     <hr>
     <form action="/docker/host_list" method="post">
 <p>添加/删除记录</p>
