--- a/templates/user_login_log.html
+++ b/templates/user_login_log.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %} 登录日志-DEVOPS{% endblock %}
 
 {% block head %}{% endblock %}
 
@@ -26,7 +26,11 @@
 						<td>{{ item.username }}</td>
 						<td>{{ item.ipaddr }}</td>
 						<td>{{ item.ctime }}</td>
-                        <td><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></td>
+                        {% if item.status == '登录成功' %}
+                        <td><span class="label label-success">{{ item.status }}</span></td>
+                        {% else %}
+                        <td><span class="label label-danger">{{ item.status }}</span></td>
+                        {% endif %}
 					</tr>
                 {% endfor %}
 				</tbody>
