--- a/templates/base.html
+++ b/templates/base.html
@@ -87,6 +87,17 @@
                             </div>
                         </li>
                         <li class="sidebar-dropdown">
+                            <a href="#"><i class="fa fa-diamond"></i><span>CMDB</span></a>
+                            <div class="sidebar-submenu">
+                                <ul>
+                                    <li><a href="#">资产管理</a></li>
+                                    <li><a href="#">任务管理</a></li>
+                                    <li><a href="#">故障事件</a></li>
+                                    <li><a href="#">运维审计</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="sidebar-dropdown">
                             <a href="#"><i class="fa fa-diamond"></i><span>系统管理</span></a>
                             <div class="sidebar-submenu">
                                 <ul>
