--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -153,7 +153,7 @@
                         <td>{{ item.mail }}</td>
                         <td>{{ item.ctime }}</td>
                         <td>{{ item.etime }}</td>
-                        <td>{{ item.status }}</td>
+                        <td><span class="label label-success">{{ item.status }}</span></td>
 					</tr>
                     {% endfor %}
 
