添加容器列表

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li><a href="{{ url_for('docker',id='host_list') }}">主机列表</a></li>
-                                    <li><a href="#">主机容器</a></li>
+                                    <li><a href="{{ url_for('docker',id='container_list') }}">主机容器</a></li>
                                     <li><a href="#">容器监控</a></li>
                                     <li><a href="#">镜像仓库</a></li>
                                 </ul>
