--- a/templates/hostlist.html
+++ b/templates/hostlist.html
@@ -22,7 +22,7 @@
 <p>名称：<input type="test" name="hostname"></p>
 <p>IP&emsp;： <input type="test" name="ipaddr"></p>
 <p>端口：<input type="test" name="port"></p>
-        <p><button type="submit">添加记录</button>&emsp;&emsp;&emsp;<button type="button">删除记录</button></p>
+        <p><button type="submit" class="btn btn-primary">添加记录</button>&emsp;&emsp;&emsp;<button type="button" class="btn btn-danger">删除记录</button></p>
 </form>
 </header>
     <div class="container">
