--- a/templates/container_list.html
+++ b/templates/container_list.html
@@ -3,7 +3,7 @@
 {% block title %}主机列表{% endblock %}
 
 {% block head %}
-
+<meta http-equiv="refresh" content="1000000000">
 <style>
 .divll{ float:left}
 </style>
@@ -23,184 +23,37 @@
      <h3 class="panel-title">Host IP</h3>
     </div>
     <div class="panel-body">
-        <div style="width: 280px;float:left;">
+        <div style="width: 300px;float:left;">
       <div style="float:left">ContainerName:</div>
         </div>
-        <div style="width: 280px;float:left;">
+        <div style="width: 120px;float:left;">
       <div style="float:left">Cpu:</div>
-      <div class="progress divll" style="width: 160px;float:left">
+      <div class="progress divll" style="width: 100px;float:left">
         <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
           <span class="sr-only">45% Complete</span>
         </div>
        </div>
         </div>
-        <div style="width: 280px;float:left;">
+        <div style="width: 120px;float:left;">
       <div style="float:left">Memory:</div>
-      <div class="progress divll" style="width: 160px;float:left">
+      <div class="progress divll" style="width: 100px;float:left">
         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
           <span class="sr-only">45% Complete</span>
         </div>
        </div>
             </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Disk:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-  </div>
+            <div style="width: 200px;float:left;">
+                <span>Usage:123123 Mb limit:123123123 Mb</span>
+                </div>
+                <div style="width: 200px;float:left;">
+                <span>NetI:123123 Kb NetO:123123 Kb</span>
+                </div>
+                <div style="width: 100px;float:left;">
+                <span>Pid:11</span>
+                </div>
 
-      <div class="panel-body">
-        <div style="width: 280px;float:left;">
-      <div style="float:left">ContainerName:</div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Cpu:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Memory:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Disk:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-  </div>
 
-      <div class="panel-body">
-        <div style="width: 280px;float:left;">
-      <div style="float:left">ContainerName:</div>
         </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Cpu:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Memory:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Disk:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-  </div>
-
-      <div class="panel-body">
-        <div style="width: 280px;float:left;">
-      <div style="float:left">ContainerName:</div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Cpu:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Memory:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Disk:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-  </div>
-
-      <div class="panel-body">
-        <div style="width: 280px;float:left;">
-      <div style="float:left">ContainerName:</div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Cpu:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Memory:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Disk:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-  </div>
-
-      <div class="panel-body">
-        <div style="width: 280px;float:left;">
-      <div style="float:left">ContainerName:</div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Cpu:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-        </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Memory:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-        <div style="width: 280px;float:left;">
-      <div style="float:left">Disk:</div>
-      <div class="progress divll" style="width: 160px;float:left">
-        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
-       </div>
-            </div>
-  </div>
 
 </div>
     <hr>
